--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Juanma's Homepage"
 title_separator          : "-"
 name                     : &name "Juan Manuel Rossi"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://juanma-rossi.github.io/jmrossi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "juanma-rossi.github.io/jmrossi.github.io/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
