--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Juan Manuel Rossi"
-  avatar           : "profile.png"
+  avatar           : "Foto_perfil_link.jpg"
   bio              : "Data and iA Learning"
   location         : "Buenos Aires, Argentina"
   employer         : "Newton Station S.R.L."
