--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,8 @@
 # main links links
 main:
   - title: "CV"
-    url: /cv/
+    #url: /cv/
+    url: /files/Juan Manuel Rossi - Data Engineer cv.pdf
   
   - title: "Portfolio"
     url: /portfolio/   
